@@ -211,9 +211,8 @@ get_next_block( size_t *offset, const libspectrum_byte *buffer,
   int error;
   libspectrum_dword next_block;
 
-  /* Check we have enough data, and check for pointer wrap */
-  if( buffer + 8 + *offset > end || buffer + *offset < buffer || 
-      buffer + 8 + *offset < buffer ) {
+  /* Check we have enough data */
+  if( end - buffer < *offset || end - buffer - *offset < 8 ) {
     libspectrum_print_error(
       LIBSPECTRUM_ERROR_CORRUPT,
       "libspectrum_warajevo_read: not enough data in buffer"
